<resources>
    <string name="app_name">NeWork</string>
    <string name="name">Name</string>
    <string name="def_desc">Image</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in_switch_msg">Sign in instead signing up.</string>
    <string name="sign_up_switch_msg">Sign up instead signing in.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="incorrect_login_pass_error">Incorrect login or password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="menu">Menu</string>
    <string name="speakers">Speakers:</string>
    <string name="link_desc">Link:</string>
    <string name="date">Date:</string>
    <string name="notification_msg">You was marked at post!</string>
    <string name="create_hint">Enter text…</string>
    <string name="clear">clear</string>
    <string name="post">Post</string>
    <string name="event">Event</string>
    <string name="choose_type">Choose type</string>
    <string name="type">type</string>
    <string name="enter_date">Enter date…</string>
    <string name="add_link">Add link…</string>
    <string name="position">Position:</string>
    <string name="position_hint">Your position…</string>
    <string name="company">Company:</string>
    <string name="company_link_hint">Your company website…</string>
    <string name="company_hint">Your company name…</string>
    <string name="save">Save</string>
    <string name="employment_date">Employment date:</string>
    <string name="employment_date_hint">YYYY</string>
    <string name="dismissal_date">Dismissal date:</string>
    <string name="dismissal_date_hint">YYYY</string>
    <string name="i_still_work_here">I still work here!</string>
    <string name="dark_mode">Dark mode</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="create">Create</string>
    <string name="event_settings">Event settings</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="offline_event">Offline event</string>
    <string name="online_event">Online event</string>
    <string name="link">LINK</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="link_intent">Open link</string>
    <string name="video_intent">Open video</string>
    <string name="audio">Audio</string>
    <string name="connection_error">Connection error</string>
    <string name="incorrect_msg">Password and login can only contain numbers and latin letters</string>
    <string name="empty_error">Some fields are empty</string>
    <string name="no_avatar">No avatar!</string>
    <string name="no_avatar_msg">Avatar is not selected! You will can not set avatar later if you resume!</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="and">And </string>
    <string name="error">Oops, something went wrong :( . Refresh or try again.</string>
    <string name="retry">Retry</string>
    <string name="no_posts">No posts see yet! Swipe to refresh feed.</string>
    <string name="no_events">No events see yet! Swipe to refresh feed.</string>
    <string name="empty">Nothing to see yet</string>
    <string name="now">Now</string>
    <string name="add_your_job">Add your Job!</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="not_chosen">Not Chosen</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>

</resources>
