<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_dimen"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/def_desc"
        android:src="@drawable/sign_up_avatar_128"
        app:layout_constraintBottom_toTopOf="@id/incorrectError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/incorrectError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_small_dimen"
        android:text="@string/incorrect_msg"
        android:textColor="@color/red"
        android:layout_marginHorizontal="@dimen/medium_dimen"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"/>

    <TextView
        android:id="@+id/emptyError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_small_dimen"
        android:text="@string/empty_error"
        android:textColor="@color/red"
        android:visibility="gone"
        android:layout_marginHorizontal="@dimen/medium_dimen"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_dimen"
        android:layout_marginBottom="@dimen/medium_dimen"
        android:background="@color/purple_text_background"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:padding="@dimen/common_small_dimen"
        android:textSize="@dimen/common_medium_text_dimen"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/incorrectError" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_dimen"
        android:layout_marginBottom="@dimen/medium_dimen"
        android:background="@color/purple_text_background"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:padding="@dimen/common_small_dimen"
        android:textSize="@dimen/common_medium_text_dimen"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_dimen"
        android:layout_marginBottom="@dimen/medium_dimen"
        android:background="@color/purple_text_background"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="@dimen/common_small_dimen"
        android:textSize="@dimen/common_medium_text_dimen"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />


    <TextView
        android:id="@+id/signUpTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_dimen"
        android:text="@string/sign_in_switch_msg"
        android:textColor="@color/link_def_color"
        android:textSize="@dimen/common_text_dimen"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/internetError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_small_dimen"
        android:text="@string/connection_error"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="@dimen/ultra_big_dimen"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_dimen"
        android:backgroundTint="@color/purple_500"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/signUpButton"
        app:layout_constraintEnd_toEndOf="@id/signUpButton"
        app:layout_constraintStart_toStartOf="@id/signUpButton"
        app:layout_constraintTop_toTopOf="@id/signUpButton"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
