<?xml version= "1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FeedFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/postsButton"
        style="@style/ListSwitcherButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_light_background"
        android:paddingVertical="@dimen/small_dimen"
        android:text="@string/posts"
        app:layout_constraintEnd_toStartOf="@id/eventsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/eventsButton"
        style="@style/ListSwitcherButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:paddingVertical="@dimen/small_dimen"
        android:text="@string/events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/postsButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/eventsParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/postsButton">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="60dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/card_event" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/postsParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/postsButton">



        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="60dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/card_post"
                tools:visibility="gone" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/emptyPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_posts"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postsButton"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/emptyEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_events"
        tools:visibility="visible"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postsButton" />

    <ProgressBar
        android:id="@+id/postProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postsButton"/>

    <ProgressBar
        android:id="@+id/eventProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventsButton"/>



</androidx.constraintlayout.widget.ConstraintLayout>
